recomended places and calendar mobile on home

--- a/app/css/style.css
+++ b/app/css/style.css
@@ -3648,6 +3648,12 @@ header.fixed-header .header-container {
   right: 50px;
 }
 
+@media (max-width: 768px) {
+  .home-banner__slider .swiper-button-prev, .home-banner__slider .swiper-button-next {
+    display: none;
+  }
+}
+
 .home-pagination .swiper-pagination-bullet {
   background-color: #fff;
   opacity: 1;
@@ -3719,6 +3725,14 @@ header.fixed-header .header-container {
   overflow: visible;
 }
 
+@media (max-width: 767px) {
+  .home-datetime {
+    position: relative;
+    transform: translate(-50%, -20px);
+    bottom: 0;
+  }
+}
+
 .home-datetime__wrapper {
   box-shadow: 0 1px 3px 0 rgba(63, 63, 68, 0.15), 0 0 0 1px rgba(63, 63, 68, 0.05);
 }
@@ -3757,6 +3771,16 @@ header.fixed-header .header-container {
   padding-top: 0;
 }
 
+@media (max-width: 767px) {
+  .home-datetime__choose {
+    border-bottom: 1px solid #e4e4e4;
+    border-radius: 0;
+  }
+  .home-datetime__choose:last-child {
+    border-bottom: 1px solid transparent;
+  }
+}
+
 .home-datetime__option::-webkit-input-placeholder {
   /* Chrome/Opera/Safari */
   opacity: 1;
@@ -3789,6 +3813,13 @@ header.fixed-header .header-container {
   border-radius: 0;
   border-left: 1px solid #e4e4e4;
   border-right: 1px solid #e4e4e4;
+}
+
+@media (max-width: 767px) {
+  .home-datetime__choose--middle {
+    border-left: none;
+    border-right: none;
+  }
 }
 
 .home-datetime__choose--last {
@@ -3913,6 +3944,16 @@ header.fixed-header .header-container {
   box-shadow: 0 1px 8px 0 rgba(0, 0, 0, 0.05);
 }
 
+@media (max-width: 580px) {
+  .home-slider {
+    padding-top: 20px;
+    height: auto;
+  }
+  .home-slider .col-md-6 {
+    padding: 0;
+  }
+}
+
 .home-slider__imgslider {
   height: 400px;
 }
@@ -3923,6 +3964,13 @@ header.fixed-header .header-container {
 
 .home-slider__imgslider .swiper-slide-active {
   opacity: 1 !important;
+}
+
+@media (max-width: 568px) {
+  .home-slider__imgslider {
+    max-height: 350px;
+    height: auto;
+  }
 }
 
 .home-slider__slideimg {
@@ -3956,6 +4004,20 @@ header.fixed-header .header-container {
   right: 2px;
 }
 
+@media (max-width: 768px) {
+  .home-slider__wrap {
+    margin-right: 0;
+  }
+}
+
+@media (max-width: 568px) {
+  .home-slider__wrap {
+    margin-top: 0;
+    margin-bottom: 15px;
+    padding: 0 15px;
+  }
+}
+
 .home-slider__content {
   width: 100%;
   height: 375px;
@@ -3970,6 +4032,12 @@ header.fixed-header .header-container {
   line-height: 1.67;
   color: #637381;
   margin-left: -5px;
+}
+
+@media (max-width: 768px) {
+  .home-slider__content {
+    padding: 30px 50px;
+  }
 }
 
 .home-slider__number {
@@ -4374,6 +4442,117 @@ header.fixed-header .header-container {
   padding: 20px 0;
 }
 
+.home-overflowview--places {
+  padding: 60px 0 120px;
+  border-bottom: 1px solid #e4e4e4;
+}
+
+.home-overflowview--places a {
+  display: inline-block;
+  width: 100%;
+  height: 100%;
+}
+
+.home-overflowview--places .row {
+  margin: auto;
+}
+
+.home-overflowview--places .col-lg-6 {
+  padding-left: 8px;
+  padding-right: 8px;
+}
+
+@media (max-width: 980px) {
+  .home-overflowview--places {
+    width: 100%;
+    overflow-x: auto;
+    overflow-y: hidden;
+    padding: 20px 0;
+  }
+  .home-overflowview--places a {
+    width: 70%;
+    margin: 0 12px;
+  }
+}
+
+@media (max-width: 980px) {
+  .home-overflowview--desktop {
+    display: none;
+  }
+}
+
+.home-overflowview--mobile {
+  display: none;
+}
+
+@media (max-width: 980px) {
+  .home-overflowview--mobile {
+    display: block;
+  }
+}
+
+.home-overflowview--places_wrapper {
+  white-space: nowrap;
+}
+
+.home-overflowview--places_small .row {
+  margin-bottom: 10px;
+}
+
+.home-overflowview--places_small .row + .row {
+  margin-bottom: 0;
+}
+
+.home-overflowview--places__content {
+  border-radius: 20px;
+  width: 100%;
+  background-size: cover;
+  background-repeat: no-repeat;
+  overflow: hidden;
+}
+
+.home-overflowview--places__content:before {
+  content: "";
+  width: 100%;
+  display: block;
+  position: relative;
+  padding-top: 50%;
+}
+
+.home-overflowview--places__content:after {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  display: block;
+  background-color: rgba(0, 0, 0, 0.2);
+}
+
+@media (max-width: 980px) {
+  .home-overflowview--places__content:before {
+    padding-top: 30%;
+  }
+}
+
+.home-overflowview--places__text {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: #fff;
+  font-size: 32px;
+  font-weight: 600;
+  z-index: 1;
+}
+
+@media (max-width: 580px) {
+  .home-overflowview--places__text {
+    font-size: 18px;
+  }
+}
+
 .home-rp__slider, .card__slider {
   overflow-y: visible;
   overflow-x: hidden;
@@ -4447,6 +4626,17 @@ header.fixed-header .header-container {
   text-align: right;
 }
 
+@media (max-width: 568px) {
+  .home-plan__image {
+    margin-top: 16px;
+    margin-bottom: 32px;
+    text-align: center;
+  }
+  .home-plan__image img {
+    width: 60%;
+  }
+}
+
 .home-plan__text {
   padding-top: 30px;
   max-width: 300px;
@@ -4465,6 +4655,16 @@ header.fixed-header .header-container {
   margin-bottom: 20px;
 }
 
+@media (max-width: 568px) {
+  .home-plan__text {
+    max-width: 100%;
+    text-align: center;
+  }
+  .home-plan__text button {
+    width: 100%;
+  }
+}
+
 .home-wrapper__calendar {
   background-size: cover;
   background-position: bottom bottom;
@@ -4475,9 +4675,27 @@ header.fixed-header .header-container {
   margin: 0 -15px;
 }
 
+@media (max-width: 568px) {
+  .calendar__filter-wrap .form-group {
+    margin-bottom: 0;
+  }
+  .calendar__filter-wrap .form-group select {
+    border-bottom: none;
+  }
+  .calendar__filter-wrap .form-group + .form-group select {
+    border-bottom: 1px solid #bdbdbd;
+  }
+}
+
 .calendar__container {
   max-width: 850px;
   margin: 0 auto;
+}
+
+@media (max-width: 568px) {
+  .calendar__container {
+    padding: 0 20px;
+  }
 }
 
 .calendar__filter {
@@ -4678,6 +4896,78 @@ header.fixed-header .header-container {
 .calendar__content .fc-today span {
   color: #5b8ef4;
   font-weight: bold;
+}
+
+@media (max-width: 568px) {
+  .calendar__content {
+    display: none;
+  }
+}
+
+.calendar__mobile {
+  display: none;
+  width: 100%;
+  background-color: #fff;
+}
+
+@media (max-width: 568px) {
+  .calendar__mobile {
+    display: block;
+  }
+}
+
+.calendar__mobile-head {
+  padding: 20px 15px;
+  border: 1px solid #e4e4e4;
+}
+
+.calendar__month {
+  padding-top: 2px;
+  font-size: 24px;
+  color: #3c3c3c;
+}
+
+.calendar__mobile-date, .calendar__mobile-content {
+  border-left: 1px solid #e4e4e4;
+  border-right: 1px solid #e4e4e4;
+}
+
+.calendar__mobile-date_big {
+  padding: 32px 0 20px;
+  color: #ffb757;
+  font-size: 64px;
+}
+
+.calendar__mobile-date_small {
+  margin-bottom: 32px;
+}
+
+.calendar__mobile-date_small b {
+  display: block;
+  font-size: 18px;
+  color: #3c3c3c;
+}
+
+.calendar__mobile-title {
+  padding: 12px 16px;
+  border-top: 1px solid #e4e4e4;
+}
+
+.calendar__mobile-title a {
+  color: #3c3c3c;
+}
+
+.calendar__mobile-title b {
+  font-size: 18px;
+}
+
+.calendar__mobile-title:last-child {
+  border-bottom: 1px solid #e4e4e4;
+}
+
+.calendar__mobile-title button {
+  width: 100%;
+  margin-top: 28px;
 }
 
 .modal-open-trip {
