--- a/app/css/style.css
+++ b/app/css/style.css
@@ -2731,6 +2731,12 @@ header.fixed-header .header-container {
       flex-direction: row;
 }
 
+@media (max-width: 600px) {
+  .modal-pd-head > .container {
+    display: block;
+  }
+}
+
 .modal-pd-head .modal-pd-description {
   width: 70%;
 }
@@ -2738,6 +2744,14 @@ header.fixed-header .header-container {
 @media (max-width: 993px) {
   .modal-pd-head .modal-pd-description {
     width: 50%;
+  }
+}
+
+@media (max-width: 600px) {
+  .modal-pd-head .modal-pd-description {
+    width: 100%;
+    display: block;
+    margin-bottom: 18px;
   }
 }
 
@@ -2765,6 +2779,14 @@ header.fixed-header .header-container {
 @media (max-width: 993px) {
   .modal-pd-head .modal-pd-filter {
     width: 50%;
+  }
+}
+
+@media (max-width: 600px) {
+  .modal-pd-head .modal-pd-filter {
+    width: 100%;
+    display: block;
+    text-align: center;
   }
 }
 
@@ -6817,8 +6839,21 @@ header.fixed-header .header-container {
   padding-top: 110px;
 }
 
+@media (max-width: 800px) {
+  .plan-destinasi {
+    padding-top: 75px;
+  }
+}
+
 .plan-destinasi > h3 {
   margin-bottom: 35px;
+}
+
+@media (max-width: 800px) {
+  .plan-destinasi > h3 {
+    text-align: center;
+    margin-bottom: 10px;
+  }
 }
 
 .plan-destinasi .row {
@@ -7045,6 +7080,28 @@ header.fixed-header .header-container {
 @media (max-width: 800px) {
   .plan-destinasi .plan-destinasi-cart-price {
     width: 100%;
+  }
+}
+
+@media (max-width: 600px) {
+  .plan-destinasi .plan-destinasi-cart-price {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    height: 120px;
+    overflow: hidden;
+    z-index: 5;
+    box-shadow: 0 -1px 4px 0 rgba(0, 0, 0, 0.06);
+  }
+  .plan-destinasi .plan-destinasi-cart-price .pd-cp-box {
+    display: none;
+  }
+  .plan-destinasi .plan-destinasi-cart-price .pd-cp-box.subtotal {
+    display: block;
+  }
+  .plan-destinasi .plan-destinasi-cart-price .pd-cp-box.subtotal .pd-cp-container {
+    margin-bottom: 8px;
   }
 }
 
@@ -7638,6 +7695,12 @@ header.fixed-header .header-container {
   .modal-plan-destinasi .nav-btn.nav-btn-right {
     right: 16px;
     transform: translate(0, -50%);
+  }
+}
+
+@media (max-width: 600px) {
+  .modal-plan-destinasi .nav-btn {
+    display: none;
   }
 }
 
