--- a/app/sass/components/_modal.scss
+++ b/app/sass/components/_modal.scss
@@ -338,11 +338,19 @@
     z-index: 3;
     display: flex;
     flex-direction: row ;
+    @media (max-width: 600px){
+      display: block;
+    }
   }
   .modal-pd-description{
     width: 70%;
     @media (max-width: 993px){
       width: 50%;
+    }
+    @media (max-width: 600px){
+      width: 100%;
+      display: block;
+      margin-bottom: 18px;
     }
     span{
       font-size: 15px;
@@ -364,6 +372,11 @@
     text-align: right;
     @media (max-width: 993px){
       width: 50%;
+    }
+    @media (max-width: 600px){
+      width: 100%;
+      display: block;
+      text-align: center;
     }
     .modal-pd-filter-inner{
       background-color: #ffffff;
