--- a/app/sass/pages/_plan_destinasi.scss
+++ b/app/sass/pages/_plan_destinasi.scss
@@ -83,8 +83,15 @@
 
 .plan-destinasi{
   padding-top: 110px;
+  @media (max-width: 800px){
+    padding-top: 75px;
+  }
   & > h3 {
     margin-bottom: 35px;
+    @media (max-width: 800px){
+      text-align: center;
+      margin-bottom: 10px;
+    }
   }
   .row{
     margin: 0px;
@@ -267,6 +274,25 @@
     }
     @media (max-width: 800px){
       width: 100%;
+    }
+    @media (max-width: 600px){
+      position: fixed;
+      left: 0;
+      bottom: 0 ;
+      right : 0 ;
+      height: 120px;
+      overflow: hidden;
+      z-index: 5;
+      box-shadow: 0 -1px 4px 0 rgba(0, 0, 0, 0.06);
+      .pd-cp-box{
+        display: none;
+        &.subtotal{
+          display: block;
+          .pd-cp-container{
+            margin-bottom: 8px;
+          }
+        }
+      }
     }
   }
   .pd-cp-box{
@@ -796,6 +822,9 @@
         right: 16px;
         transform: translate(0 , -50% );
       }
+    }
+    @media (max-width: 600px){
+      display: none;
     }
   }
   .modal-pd-planbox{
