--- a/app/css/style.css
+++ b/app/css/style.css
@@ -6378,11 +6378,11 @@ header.fixed-header .header-container {
   margin-left: calc(-40% - 5px);
 }
 
-.container--full.maps {
+.container--full.maps-wrap {
   position: relative;
 }
 
-.container--full.maps .maps-container {
+.container--full.maps-wrap .maps-container {
   top: 0;
   right: 0;
   bottom: 0;
@@ -6390,24 +6390,24 @@ header.fixed-header .header-container {
   position: absolute !important;
 }
 
-.container--full.maps h1 {
+.container--full.maps-wrap h1 {
   color: white;
 }
 
-.container--full.maps .ccw-ico + .ccw-ico {
+.container--full.maps-wrap .ccw-ico + .ccw-ico {
   margin-top: 16px;
 }
 
-.container--full.maps .ccw-body {
+.container--full.maps-wrap .ccw-body {
   max-width: 400px;
   width: 100%;
 }
 
-.container--full.maps .ccw-body h5 {
+.container--full.maps-wrap .ccw-body h5 {
   margin-bottom: 18px;
 }
 
-.container--full.maps .ccw-body p, .container--full.maps .ccw-body h5 {
+.container--full.maps-wrap .ccw-body p, .container--full.maps-wrap .ccw-body h5 {
   line-height: 1.33;
   text-align: left;
   color: #ffffff;
@@ -8573,12 +8573,31 @@ header.fixed-header .header-container {
   overflow: visible;
 }
 
+@media (max-width: 770px) {
+  .static {
+    padding: 0 0 86px;
+  }
+}
+
 .static__side {
   padding: 0;
 }
 
 .static__side:last-child {
   padding-left: 15px;
+}
+
+@media (max-width: 770px) {
+  .static__side {
+    -ms-flex: 0 0 100%;
+        flex: 0 0 100%;
+    width: 100%;
+    max-width: 100%;
+  }
+  .static__side + .static__side {
+    margin-top: 20px;
+    padding: 0 15px;
+  }
 }
 
 .static__menu {
@@ -8593,8 +8612,23 @@ header.fixed-header .header-container {
   font-weight: 300;
 }
 
+@media (max-width: 770px) {
+  .static__menu {
+    display: none;
+  }
+  .static__menu.static__menu--visible {
+    display: block;
+  }
+}
+
 .static__category {
   padding: 28px 0;
+}
+
+@media (max-width: 580px) {
+  .static__category {
+    padding: 32px 0 16px;
+  }
 }
 
 .static__subcategory {
@@ -8607,6 +8641,12 @@ header.fixed-header .header-container {
 .static__subcategory:hover, .static__subcategory.active {
   background-color: #fff;
   box-shadow: 0 1px 3px 0 rgba(63, 63, 68, 0.15), 0 0 0 1px rgba(63, 63, 68, 0.05);
+}
+
+@media (max-width: 580px) {
+  .static__subcategory:hover h5, .static__subcategory.active h5 {
+    padding-top: 4px;
+  }
 }
 
 .static__container {
@@ -8628,6 +8668,12 @@ header.fixed-header .header-container {
   position: relative;
   padding: 0 32px;
   z-index: 2;
+}
+
+@media (max-width: 580px) {
+  .static__content {
+    padding: 0 16px;
+  }
 }
 
 .static__full-content {
@@ -8669,6 +8715,12 @@ header.fixed-header .header-container {
   line-height: 20px;
 }
 
+@media (max-width: 580px) {
+  .static-tnc .static__subcategory h5 {
+    margin: 0;
+  }
+}
+
 .static__hiw {
   transition: 0.3s ease;
 }
@@ -8693,6 +8745,15 @@ header.fixed-header .header-container {
 
 .static__hiw:hover {
   opacity: 0.8;
+}
+
+@media (max-width: 580px) {
+  .static__hiw {
+    text-align: center;
+  }
+  .static__hiw a {
+    padding: 32px 0;
+  }
 }
 
 .static__hiw-imagewrap {
@@ -8742,6 +8803,12 @@ header.fixed-header .header-container {
   transform: translate(-50%, -50%);
 }
 
+@media (max-width: 580px) {
+  .static__what-is:before {
+    padding-top: 75%;
+  }
+}
+
 .static__contact-maps, .static__contact-sent {
   position: relative;
   margin: 64px 0 32px;
@@ -8775,6 +8842,12 @@ header.fixed-header .header-container {
   color: #fff;
 }
 
+@media (max-width: 580px) {
+  .static__contact-info {
+    margin-top: 30px;
+  }
+}
+
 .static__maps {
   position: absolute;
   top: 45%;
@@ -8782,6 +8855,24 @@ header.fixed-header .header-container {
   width: 100%;
   height: 275px;
   box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.18);
+}
+
+.static__maps.static__maps--mobile {
+  display: none;
+}
+
+@media (max-width: 580px) {
+  .static__maps.static__maps--desktop {
+    display: none;
+  }
+  .static__maps.static__maps--mobile {
+    display: block;
+    position: relative;
+    top: auto;
+    transform: none;
+    margin-left: -16px;
+    width: calc(100% + 40px);
+  }
 }
 
 .static_contact-bg {
@@ -8805,6 +8896,12 @@ header.fixed-header .header-container {
   width: 150px;
 }
 
+@media (max-width: 580px) {
+  .static__contact-button {
+    text-align: center;
+  }
+}
+
 .static__faq {
   width: 100%;
   padding: 16px 0;
@@ -8819,6 +8916,12 @@ header.fixed-header .header-container {
 .static__faq.active .static__faq-body {
   display: block;
   transform: translateY(0px);
+}
+
+@media (max-width: 580px) {
+  .static__faq.active .static__faq-body {
+    padding-top: 14px;
+  }
 }
 
 .static__faq-head {
@@ -8854,6 +8957,12 @@ header.fixed-header .header-container {
   left: 9px;
 }
 
+@media (max-width: 400px) {
+  .static__faq-head.static__faq-head--more:before {
+    top: 16px;
+  }
+}
+
 .static__faq-head span {
   position: absolute;
   top: 50%;
@@ -8871,6 +8980,27 @@ header.fixed-header .header-container {
 .static__faq-body {
   display: none;
   padding-left: 55px;
+}
+
+@media (max-width: 580px) {
+  .static__faq-body {
+    padding-left: 0;
+  }
+}
+
+.static-breadcrumpt {
+  display: none;
+}
+
+@media (max-width: 770px) {
+  .static-breadcrumpt {
+    display: block;
+    background-color: #5b8ef4;
+    padding: 12px 16px;
+  }
+  .static-breadcrumpt a, .static-breadcrumpt b {
+    color: #fff;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
