detail atraksi mobile

--- a/app/sass/pages/_detail_atraksi.scss
+++ b/app/sass/pages/_detail_atraksi.scss
@@ -210,6 +210,21 @@
           }
         }
       }
+      @media(max-width: 768px){
+        max-width: 100%;
+      }
+      @media(max-width: 568px){
+        width: 350px;
+        max-width: initial;
+        display: inline-block;
+        margin-right: 8px;
+        &:last-child{
+          margin-right: 0;
+        }
+        p{
+          white-space: normal;
+        }
+      }
     }
     &.white, &.grey{
       h1{
@@ -313,6 +328,11 @@
           padding-top: 40%;
         }
       }
+      @media(max-width: 568px){
+        .slide-img-container{
+          display: none;
+        }
+      }
     }
   }
   .swiper-button-next , .swiper-button-prev{
@@ -325,6 +345,8 @@
     background-image: none;
     text-align: center;
     line-height: 36px;
+    transform: translateY(-50%);
+    margin-top: 0;
     .fa-chevron-right{
       margin-right: -4px;
     }
@@ -334,26 +356,29 @@
     &:before , &:after{
       display: none;
     }
-    @media (max-width: 600px){
-      display: none;
+  }
+  @media (max-width: 568px){
+    .swiper-button-next{
+      right: -10px;
+    }
+    .swiper-button-prev{
+      left: -10px;
     }
   }
-  // .swiper-button-next{
-  //   right: 0;
-  //   transform: translateX(50%);
-  // }
-  // .swiper-button-prev{
-  //   left: 0;
-  //   transform: translateX(-50%);
-  // }
   .gallery-thumbs{
     margin-top: 16px;
     .swiper-slide{
       opacity: 0.5;
       cursor: pointer;
+      @media(max-width: 568px){
+        opacity: 1;
+      }
       &.swiper-slide-active{
         opacity: 1;
         border: solid 4px #5b8ef4;
+        @media(max-width: 568px){
+          border: none;
+        }
       }
     }
     .slide-img-container{
@@ -370,6 +395,10 @@
     &.swiper-container{
       .swiper-wrapper{
         margin-left:calc(-40% - 5px);
+        @media(max-width: 568px){
+          padding-left: 15px;
+          margin-left:calc(-30% - 5px);
+        }
       }
     }
   }
@@ -405,10 +434,34 @@
         color: #ffffff;
       }
     }
+    @media(max-width: 768px){
+      padding-bottom: 0;
+      .container{
+        width: 100%;
+        padding-bottom: 32px;
+      }
+      .maps-container{
+        position: relative !important;
+        top: auto;
+        right: auto;
+        bottom: auto;
+        width: 100%;
+        height: 250px;
+      }
+    }
   }
 }
 
 // comment section
+.comment-section{
+  @media(max-width: 770px){
+    & > .col-md-8, & > .col-md-4{
+      flex: 0 0 100%;
+      max-width: 100%;
+      padding: 0;
+    }
+  }
+}
 .comment{
   background-color: #fff;
   box-shadow: 0 1px 3px 0 rgba(170, 170, 170, 0.5);
@@ -427,6 +480,15 @@
 .comment__content{
   padding: 18px 0;
   border-bottom: 1px solid #e4e4e4;
+  &.comment__content--mobile{
+    padding: 18px 0 0;
+    border-bottom: none;
+  }
+  button{
+    width: 250px;
+    max-width: 100%;
+    margin: 0 auto;
+  }
 }
 .comment__profile{
   position: relative;
@@ -440,6 +502,20 @@
   .star-rating em{
     font-size: 24px;
     margin-left: 12px;
+  }
+  @media(max-width: 568px){
+    position: relative;
+    display: block;
+    top: auto;
+    right: auto;
+    transform: none;
+    margin-top: 8px;
+    .star-rating em{
+      margin-left: 4px;
+      &:first-child{
+        margin-left: 0;
+      }
+    }
   }
 }
 .comment__person{
@@ -455,9 +531,27 @@
       font-weight: 600;
     }
   }
+  @media(max-width: 568px){
+    .guide-detail__person{
+      width: 60px;
+      height: 60px;
+      display: inline-block;
+      margin: 0;
+    }
+    .guide-detail__info{
+      display: inline-block;
+      margin: 0;
+    }
+  }
 }
 
 // near atraction section
+.near-wrapper{
+  margin-top: 32px;
+  &.col-md-4{
+    max-width: 600px;
+  }
+}
 .near__content{
   background-color: #fff;
   border: solid 1px #e4e4e4;
@@ -476,6 +570,31 @@
     width: 100%;
     transform: translateY(-50%);
     margin: 0;
+  }
+  @media(max-width: 320px){
+    .near__side{
+      flex: 0 0 100%;
+      max-width: 100%;
+      margin-bottom: 8px;
+      h5{
+        position: relative;
+        top: auto;
+        transform: none;
+      }
+      .btn{
+        width: calc(50% - 5px);
+        margin: 0;
+        margin-right: 5px;
+        & + .btn{
+          margin-left: 5px;
+          margin-right: 0;
+        }
+      }
+      &:last-child{
+        padding: 0;
+        margin-bottom: 0;
+      }
+    }
   }
 }
 .near__side{
@@ -517,5 +636,17 @@
     span{
       vertical-align: middle;
     }
+  }
+}
+.activity-container{
+  @media(max-width: 568px){
+    overflow-x: auto;
+    overflow-y: hidden;
+    display: block;
+  }
+}
+.activity-wrap{
+  @media(max-width: 568px){
+     white-space: nowrap;
   }
 }
