--- a/app/css/style.css
+++ b/app/css/style.css
@@ -6284,6 +6284,27 @@ header.fixed-header .header-container {
   }
 }
 
+@media (max-width: 768px) {
+  .detail-container .container--full .ccw-box {
+    max-width: 100%;
+  }
+}
+
+@media (max-width: 568px) {
+  .detail-container .container--full .ccw-box {
+    width: 350px;
+    max-width: initial;
+    display: inline-block;
+    margin-right: 8px;
+  }
+  .detail-container .container--full .ccw-box:last-child {
+    margin-right: 0;
+  }
+  .detail-container .container--full .ccw-box p {
+    white-space: normal;
+  }
+}
+
 .detail-container .container--full.white h1, .detail-container .container--full.grey h1 {
   margin-bottom: 0px;
 }
@@ -6404,6 +6425,12 @@ header.fixed-header .header-container {
   padding-top: 40%;
 }
 
+@media (max-width: 568px) {
+  .detail-gallery .gallery-top .swiper-slide .slide-img-container {
+    display: none;
+  }
+}
+
 .detail-gallery .swiper-button-next, .detail-gallery .swiper-button-prev {
   width: 30.8px;
   height: 30px;
@@ -6414,6 +6441,8 @@ header.fixed-header .header-container {
   background-image: none;
   text-align: center;
   line-height: 36px;
+  transform: translateY(-50%);
+  margin-top: 0;
 }
 
 .detail-gallery .swiper-button-next .fa-chevron-right, .detail-gallery .swiper-button-prev .fa-chevron-right {
@@ -6428,9 +6457,12 @@ header.fixed-header .header-container {
   display: none;
 }
 
-@media (max-width: 600px) {
-  .detail-gallery .swiper-button-next, .detail-gallery .swiper-button-prev {
-    display: none;
+@media (max-width: 568px) {
+  .detail-gallery .swiper-button-next {
+    right: -10px;
+  }
+  .detail-gallery .swiper-button-prev {
+    left: -10px;
   }
 }
 
@@ -6443,9 +6475,21 @@ header.fixed-header .header-container {
   cursor: pointer;
 }
 
+@media (max-width: 568px) {
+  .detail-gallery .gallery-thumbs .swiper-slide {
+    opacity: 1;
+  }
+}
+
 .detail-gallery .gallery-thumbs .swiper-slide.swiper-slide-active {
   opacity: 1;
   border: solid 4px #5b8ef4;
+}
+
+@media (max-width: 568px) {
+  .detail-gallery .gallery-thumbs .swiper-slide.swiper-slide-active {
+    border: none;
+  }
 }
 
 .detail-gallery .gallery-thumbs .slide-img-container {
@@ -6463,6 +6507,13 @@ header.fixed-header .header-container {
 
 .detail-gallery .gallery-thumbs.swiper-container .swiper-wrapper {
   margin-left: calc(-40% - 5px);
+}
+
+@media (max-width: 568px) {
+  .detail-gallery .gallery-thumbs.swiper-container .swiper-wrapper {
+    padding-left: 15px;
+    margin-left: calc(-30% - 5px);
+  }
 }
 
 .container--full.maps-wrap {
@@ -6500,6 +6551,33 @@ header.fixed-header .header-container {
   color: #ffffff;
 }
 
+@media (max-width: 768px) {
+  .container--full.maps-wrap {
+    padding-bottom: 0;
+  }
+  .container--full.maps-wrap .container {
+    width: 100%;
+    padding-bottom: 32px;
+  }
+  .container--full.maps-wrap .maps-container {
+    position: relative !important;
+    top: auto;
+    right: auto;
+    bottom: auto;
+    width: 100%;
+    height: 250px;
+  }
+}
+
+@media (max-width: 770px) {
+  .comment-section > .col-md-8, .comment-section > .col-md-4 {
+    -ms-flex: 0 0 100%;
+        flex: 0 0 100%;
+    max-width: 100%;
+    padding: 0;
+  }
+}
+
 .comment {
   background-color: #fff;
   box-shadow: 0 1px 3px 0 rgba(170, 170, 170, 0.5);
@@ -6524,6 +6602,17 @@ header.fixed-header .header-container {
   border-bottom: 1px solid #e4e4e4;
 }
 
+.comment__content.comment__content--mobile {
+  padding: 18px 0 0;
+  border-bottom: none;
+}
+
+.comment__content button {
+  width: 250px;
+  max-width: 100%;
+  margin: 0 auto;
+}
+
 .comment__profile {
   position: relative;
   margin-bottom: 16px;
@@ -6541,6 +6630,23 @@ header.fixed-header .header-container {
   margin-left: 12px;
 }
 
+@media (max-width: 568px) {
+  .comment__rating {
+    position: relative;
+    display: block;
+    top: auto;
+    right: auto;
+    transform: none;
+    margin-top: 8px;
+  }
+  .comment__rating .star-rating em {
+    margin-left: 4px;
+  }
+  .comment__rating .star-rating em:first-child {
+    margin-left: 0;
+  }
+}
+
 .comment__person .guide-detail__person {
   width: 50px;
   height: 50px;
@@ -6554,6 +6660,27 @@ header.fixed-header .header-container {
   font-size: 15px;
   color: #444447;
   font-weight: 600;
+}
+
+@media (max-width: 568px) {
+  .comment__person .guide-detail__person {
+    width: 60px;
+    height: 60px;
+    display: inline-block;
+    margin: 0;
+  }
+  .comment__person .guide-detail__info {
+    display: inline-block;
+    margin: 0;
+  }
+}
+
+.near-wrapper {
+  margin-top: 32px;
+}
+
+.near-wrapper.col-md-4 {
+  max-width: 600px;
 }
 
 .near__content {
@@ -6578,6 +6705,33 @@ header.fixed-header .header-container {
   width: 100%;
   transform: translateY(-50%);
   margin: 0;
+}
+
+@media (max-width: 320px) {
+  .near__bottom .near__side {
+    -ms-flex: 0 0 100%;
+        flex: 0 0 100%;
+    max-width: 100%;
+    margin-bottom: 8px;
+  }
+  .near__bottom .near__side h5 {
+    position: relative;
+    top: auto;
+    transform: none;
+  }
+  .near__bottom .near__side .btn {
+    width: calc(50% - 5px);
+    margin: 0;
+    margin-right: 5px;
+  }
+  .near__bottom .near__side .btn + .btn {
+    margin-left: 5px;
+    margin-right: 0;
+  }
+  .near__bottom .near__side:last-child {
+    padding: 0;
+    margin-bottom: 0;
+  }
 }
 
 .near__side {
@@ -6626,6 +6780,20 @@ header.fixed-header .header-container {
 
 .near__rate .planbox-rating span {
   vertical-align: middle;
+}
+
+@media (max-width: 568px) {
+  .activity-container {
+    overflow-x: auto;
+    overflow-y: hidden;
+    display: block;
+  }
+}
+
+@media (max-width: 568px) {
+  .activity-wrap {
+    white-space: nowrap;
+  }
 }
 
 .guide-container {
@@ -7127,6 +7295,14 @@ header.fixed-header .header-container {
 
 .detail-price__button {
   width: 100%;
+  vertical-align: middle;
+}
+
+.detail-price__button span {
+  display: inline-block;
+  vertical-align: text-top;
+  font-size: 24px;
+  margin-right: 4px;
 }
 
 .detail-price__participant {
