--- a/app/sass/pages/_detail_opentrip.scss
+++ b/app/sass/pages/_detail_opentrip.scss
@@ -311,6 +311,13 @@
 }
 .detail-price__button{
 	width: 100%;
+	vertical-align: middle;
+	span{
+		display: inline-block;
+		vertical-align: text-top;
+		font-size: 24px;
+		margin-right: 4px;
+	}
 }
 .detail-price__participant{
 	display: none;
