--- a/app/views/detail_atraksi.html
+++ b/app/views/detail_atraksi.html
@@ -95,55 +95,64 @@
       <div class="ccw-head">
           <h1>Aktifitas</h1>
       </div>
-      <div class="ccw-box">
-        <div class="row">
-          <div class="col-md-3">
-            <div class="ccw-img-container" style="background-image:url('./images/dummy/highrope.jpg')">
-
+      <!-- untuk mobile berikan wrap activity-container dan activity-wrap -->
+      <div class="activity-container">
+        <div class="activity-wrap">
+          <div class="ccw-box">
+            <div class="row">
+              <div class="col-md-3">
+                <div class="ccw-img-container" style="background-image:url('./images/dummy/highrope.jpg')">
+          
+                </div>
+              </div>
+              <div class="col-md-9">
+                <h5>Highrope Outbound</h5>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore Ad duis
+                  scripta qui. Detraxit ocurreret percipitur ex eos, mollis vocent recusabo te vim.</p>
+              </div>
             </div>
           </div>
-          <div class="col-md-9">
-            <h5>Highrope Outbound</h5>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore Ad duis scripta qui. Detraxit ocurreret percipitur ex eos, mollis vocent recusabo te vim.</p>
-          </div>
-        </div>
-      </div>
-      <div class="ccw-box">
-        <div class="row">
-          <div class="col-md-3">
-            <div class="ccw-img-container" style="background-image:url('./images/dummy/highrope.jpg')">
-
+          <div class="ccw-box">
+            <div class="row">
+              <div class="col-md-3">
+                <div class="ccw-img-container" style="background-image:url('./images/dummy/highrope.jpg')">
+          
+                </div>
+              </div>
+              <div class="col-md-9">
+                <h5>Highrope Outbound</h5>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore Ad duis
+                  scripta qui. Detraxit ocurreret percipitur ex eos, mollis vocent recusabo te vim.</p>
+              </div>
             </div>
           </div>
-          <div class="col-md-9">
-            <h5>Highrope Outbound</h5>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore Ad duis scripta qui. Detraxit ocurreret percipitur ex eos, mollis vocent recusabo te vim.</p>
-          </div>
-        </div>
-      </div>
-      <div class="ccw-box">
-        <div class="row">
-          <div class="col-md-3">
-            <div class="ccw-img-container" style="background-image:url('./images/dummy/highrope.jpg')">
-
+          <div class="ccw-box">
+            <div class="row">
+              <div class="col-md-3">
+                <div class="ccw-img-container" style="background-image:url('./images/dummy/highrope.jpg')">
+          
+                </div>
+              </div>
+              <div class="col-md-9">
+                <h5>Highrope Outbound</h5>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore Ad duis
+                  scripta qui. Detraxit ocurreret percipitur ex eos, mollis vocent recusabo te vim.</p>
+              </div>
             </div>
           </div>
-          <div class="col-md-9">
-            <h5>Highrope Outbound</h5>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore Ad duis scripta qui. Detraxit ocurreret percipitur ex eos, mollis vocent recusabo te vim.</p>
-          </div>
-        </div>
-      </div>
-      <div class="ccw-box">
-        <div class="row">
-          <div class="col-md-3">
-            <div class="ccw-img-container" style="background-image:url('./images/dummy/highrope.jpg')">
-
+          <div class="ccw-box">
+            <div class="row">
+              <div class="col-md-3">
+                <div class="ccw-img-container" style="background-image:url('./images/dummy/highrope.jpg')">
+          
+                </div>
+              </div>
+              <div class="col-md-9">
+                <h5>Highrope Outbound</h5>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore Ad duis
+                  scripta qui. Detraxit ocurreret percipitur ex eos, mollis vocent recusabo te vim.</p>
+              </div>
             </div>
-          </div>
-          <div class="col-md-9">
-            <h5>Highrope Outbound</h5>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore Ad duis scripta qui. Detraxit ocurreret percipitur ex eos, mollis vocent recusabo te vim.</p>
           </div>
         </div>
       </div>
@@ -177,7 +186,7 @@
 
 
       </div>
-      <div class="swiper-container gallery-thumbs swiper-container-horizontal">
+      <div class="swiper-container gallery-thumbs swiper-container-horizontal overflow_visible">
         <div class="swiper-wrapper">
           <div class="swiper-slide swiper-slide-active">
             <div class="slide-img-container" style="background-image: url('http://cdn.demo.fabthemes.com/kansas/files/2012/08/wallpaper-722590cp.jpg') ; "></div>
@@ -238,7 +247,7 @@
   <!-- other info goes here -->
   <div class="container container--full">
     <div class="container">
-      <div class="row row--withmargin">
+      <div class="row row--withmargi comment-section">
         <div class="col-md-8">
           <div class="ccw-head">
               <h1>Ulasan</h1>
@@ -332,20 +341,23 @@
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore percipitur ex eos, mollis vocent recusabo te vim. Ei duo delectus pertinacia adversarium. Vix et elitr appareat efficiantur, eu quo enim lucilius tractatos, et vix postea hendrerit sadipscing.</p>
                 <span>2 Hari yang lalu</span>
               </div>
+              <div class="comment__content comment__content--mobile text-center">
+                <button class="btn">LIHAT LEBIH</button>
+              </div>
             </div>
           </div>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-4 near-wrapper">
           <div class="ccw-head">
               <h1>Atraksi Terdekat</h1>
           </div>
           <div class="near">
             <div class="near__content">
               <div class="row near__top">
-                <div class="col-md-4 near__side">
+                <div class="col-4 near__side">
                   <img src="./images/dummy/recomended.jpeg" alt="atraksi" />
                 </div>
-                <div class="col-md-8 near__side relative">
+                <div class="col-8 near__side relative">
                   <span class="near__subtitle">ATRAKSI</span>
                   <p class="near__title">Ranca Upas</p>
                   <div class="near__rate">
@@ -360,10 +372,10 @@
                 </div>
               </div>
               <div class="row near__bottom">
-                <div class="col-md-4 near__side relative">
+                <div class="col-4 near__side relative">
                   <h5>Rp. 200.000</h5>
                 </div>
-                <div class="col-md-8 near__side clearfix">
+                <div class="col-8 near__side clearfix">
                   <button class="btn">Lihat Detail</button>
                   <button class="btn btn--orange">Tambahkan</button>
                 </div>
@@ -371,10 +383,10 @@
             </div>
             <div class="near__content">
               <div class="row near__top">
-                <div class="col-md-4 near__side">
+                <div class="col-4 near__side">
                   <img src="./images/dummy/recomended.jpeg" alt="atraksi" />
                 </div>
-                <div class="col-md-8 near__side relative">
+                <div class="col-8 near__side relative">
                   <span class="near__subtitle">ATRAKSI</span>
                   <p class="near__title">Ranca Upas</p>
                   <div class="near__rate">
@@ -389,10 +401,10 @@
                 </div>
               </div>
               <div class="row near__bottom">
-                <div class="col-md-4 near__side relative">
+                <div class="col-4 near__side relative">
                   <h5>Rp 5.000.000</h5>
                 </div>
-                <div class="col-md-8 near__side clearfix">
+                <div class="col-8 near__side clearfix">
                   <button class="btn">Lihat Detail</button>
                   <button class="btn btn--orange">Tambahkan</button>
                 </div>
@@ -400,10 +412,10 @@
             </div>
             <div class="near__content">
               <div class="row near__top">
-                <div class="col-md-4 near__side">
+                <div class="col-4 near__side">
                   <img src="./images/dummy/recomended.jpeg" alt="atraksi" />
                 </div>
-                <div class="col-md-8 near__side relative">
+                <div class="col-8 near__side relative">
                   <span class="near__subtitle">ATRAKSI</span>
                   <p class="near__title">Tangkuban Perahu</p>
                   <div class="near__rate">
@@ -418,10 +430,10 @@
                 </div>
               </div>
               <div class="row near__bottom">
-                <div class="col-md-4 near__side relative">
+                <div class="col-4 near__side relative">
                   <h5>Rp 50.000.000</h5>
                 </div>
-                <div class="col-md-8 near__side clearfix">
+                <div class="col-8 near__side clearfix">
                   <button class="btn">Lihat Detail</button>
                   <button class="btn btn--orange">Tambahkan</button>
                 </div>
@@ -429,6 +441,21 @@
             </div>
           </div>
         </div>
+      </div>
+    </div>
+  </div>
+  <div class="detail-price">
+    <div class="detail-price__wrapper">
+      <div class="detail-price__content">
+        <div class="detail-price__value row clearfix">
+          <div class="col-6">
+            Mulai Dari
+          </div>
+          <div class="col-6">
+            Rp 400.000
+          </div>
+        </div>
+        <button class="detail-price__button btn btn--blue btn--medium"><span class="fa fa-plus-circle"></span> TAMBAHKAN KE PLAN</button>
       </div>
     </div>
   </div>
