detail atraksi dan detail hotel mobile

--- a/app/views/detail_atraksi.html
+++ b/app/views/detail_atraksi.html
@@ -247,6 +247,7 @@
   <!-- other info goes here -->
   <div class="container container--full">
     <div class="container">
+      <!-- tambahkan class comment-section -->
       <div class="row row--withmargi comment-section">
         <div class="col-md-8">
           <div class="ccw-head">
@@ -341,12 +342,14 @@
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore percipitur ex eos, mollis vocent recusabo te vim. Ei duo delectus pertinacia adversarium. Vix et elitr appareat efficiantur, eu quo enim lucilius tractatos, et vix postea hendrerit sadipscing.</p>
                 <span>2 Hari yang lalu</span>
               </div>
+              <!-- tambahkan bagian ini -->
               <div class="comment__content comment__content--mobile text-center">
                 <button class="btn">LIHAT LEBIH</button>
               </div>
             </div>
           </div>
         </div>
+        <!-- tambahkan class near-wrapper -->
         <div class="col-md-4 near-wrapper">
           <div class="ccw-head">
               <h1>Atraksi Terdekat</h1>
@@ -354,9 +357,11 @@
           <div class="near">
             <div class="near__content">
               <div class="row near__top">
+                <!-- col-md-4 menjadi col-4 -->
                 <div class="col-4 near__side">
                   <img src="./images/dummy/recomended.jpeg" alt="atraksi" />
                 </div>
+                <!-- col-md-8 menjadi col-8 -->
                 <div class="col-8 near__side relative">
                   <span class="near__subtitle">ATRAKSI</span>
                   <p class="near__title">Ranca Upas</p>
@@ -372,9 +377,11 @@
                 </div>
               </div>
               <div class="row near__bottom">
+                <!-- col-md-4 menjadi col-4 -->
                 <div class="col-4 near__side relative">
                   <h5>Rp. 200.000</h5>
                 </div>
+                <!-- col-md-8 menjadi col-8 -->
                 <div class="col-8 near__side clearfix">
                   <button class="btn">Lihat Detail</button>
                   <button class="btn btn--orange">Tambahkan</button>
@@ -383,9 +390,11 @@
             </div>
             <div class="near__content">
               <div class="row near__top">
+                <!-- col-md-4 menjadi col-4 -->
                 <div class="col-4 near__side">
                   <img src="./images/dummy/recomended.jpeg" alt="atraksi" />
                 </div>
+                <!-- col-md-8 menjadi col-8 -->
                 <div class="col-8 near__side relative">
                   <span class="near__subtitle">ATRAKSI</span>
                   <p class="near__title">Ranca Upas</p>
@@ -401,9 +410,11 @@
                 </div>
               </div>
               <div class="row near__bottom">
+                <!-- col-md-4 menjadi col-4 -->
                 <div class="col-4 near__side relative">
                   <h5>Rp 5.000.000</h5>
                 </div>
+                <!-- col-md-8 menjadi col-8 -->
                 <div class="col-8 near__side clearfix">
                   <button class="btn">Lihat Detail</button>
                   <button class="btn btn--orange">Tambahkan</button>
@@ -412,9 +423,11 @@
             </div>
             <div class="near__content">
               <div class="row near__top">
+                <!-- col-md-4 menjadi col-4 -->
                 <div class="col-4 near__side">
                   <img src="./images/dummy/recomended.jpeg" alt="atraksi" />
                 </div>
+                <!-- col-md-8 menjadi col-8 -->
                 <div class="col-8 near__side relative">
                   <span class="near__subtitle">ATRAKSI</span>
                   <p class="near__title">Tangkuban Perahu</p>
@@ -430,9 +443,11 @@
                 </div>
               </div>
               <div class="row near__bottom">
+                <!-- col-md-4 menjadi col-4 -->
                 <div class="col-4 near__side relative">
                   <h5>Rp 50.000.000</h5>
                 </div>
+                <!-- col-md-8 menjadi col-8 -->
                 <div class="col-8 near__side clearfix">
                   <button class="btn">Lihat Detail</button>
                   <button class="btn btn--orange">Tambahkan</button>
